--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,30 +4,29 @@ jobs:
      working_directory: ~/please
      docker:
        - image: thoughtmachine/please_ubuntu:20191202
-     environment:
-       PLZ_ARGS: "-p --profile ci"
      steps:
        - checkout
        - restore_cache:
            key: go-linux-main-v1-{{ checksum "third_party/go/BUILD" }}
        - run:
            name: Test
-           command: ./pleasew test
+           command: ./pleasew test -p --profile ci -v 2
        - store_test_results:
            path: plz-out/results
        - run:
            name: Package
-           command: ./pleasew build //elan //mettle
+           command: ./pleasew build //elan //mettle //scripts:gen_release -p --profile ci -v 2
        - persist_to_workspace:
            root: plz-out/bin
            paths:
              - elan/elan
              - mettle/mettle
+             - scripts/gen_release.pex
        - store_artifacts:
            path: plz-out/log
        - save_cache:
            key: go-linux-main-v1-{{ checksum "third_party/go/BUILD" }}
-           paths: [ "/.plz-cache/third_party/go" ]
+           paths: [ ".plz-cache/third_party/go" ]
 
    release:
      docker:
@@ -38,7 +37,7 @@ jobs:
        - add_ssh_keys:
            fingerprints:
              - "cc:57:b9:67:31:65:a6:70:8c:e3:e7:90:ca:e6:a6:41"
-       - run: /tmp/workspace/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/mettle/mettle
+       - run: /tmp/workspace/scripts/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/mettle/mettle
 
 workflows:
   version: 2
