--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -13,6 +13,7 @@ go_library(
         "//third_party/go/prometheus",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
+        "//third_party/go:ristretto",
         "//third_party/go:rpcstatus",
     ],
     visibility = ["//elan/..."],
