--- a/zeal/rpc/BUILD
+++ b/zeal/rpc/BUILD
@@ -8,8 +8,11 @@ go_library(
         "//third_party/go:grpc-middleware",
         "//third_party/go/prometheus:grpc-prometheus",
         "//third_party/go/prometheus",
+        "//third_party/go:go-multierror",
+        "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
+        "//third_party/go:retryablehttp",
         "//third_party/go:rpcstatus",
         "//third_party/go:sri",
     ],
