Changing caching to groupcache
This allows more sensible scaling of it since scaling up will not result in new instances with no cache info.
Still to be seen how well it works in practice.

--- a/elan/BUILD
+++ b/elan/BUILD
@@ -6,7 +6,7 @@ go_binary(
         "//metrics",
         "//third_party/go:cli-init",
         "//third_party/go:logging",
-        "//third_party/go:humanize",
+        "//third_party/go/gocloud",
     ],
 )
 
