--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -1,9 +1,6 @@
 go_library(
     name = "rpc",
-    srcs = [
-        "rpc.go",
-        "tree.go",
-    ],
+    srcs = glob(["*.go"]),
     deps = [
         "//creds",
         "//third_party/go/gocloud",
@@ -11,12 +8,12 @@ go_library(
         "//third_party/go:logging",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
+        "//third_party/go:groupcache",
         "//third_party/go/prometheus:grpc-prometheus",
         "//third_party/go:longrunning",
         "//third_party/go/prometheus",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
-        "//third_party/go:ristretto",
         "//third_party/go:rpcstatus",
     ],
     visibility = ["//elan/..."],
