--- a/.plzconfig
+++ b/.plzconfig
@@ -1,5 +1,6 @@
 [go]
 importpath = github.com/thought-machine/please-servers
+gopath = $TMP_DIR:$TMP_DIR/third_party/go:$TMP_DIR/third_party/go/prometheus:$TMP_DIR/third_party/go/gocloud
 
 [python]
 moduledir = third_party/python
