--- a/elan/BUILD
+++ b/elan/BUILD
@@ -3,15 +3,14 @@ go_binary(
     srcs = ["main.go"],
     deps = [
         "//elan/rpc",
-        "//metrics",
         "//third_party/go:cli-init",
-        "//third_party/go:logging",
+        "//third_party/go:http-admin",
         "//third_party/go/gocloud",
     ],
 )
 
 sh_cmd(
     name = "run_local",
-    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log",
+    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log --admin_disabled",
     srcs = [":elan"],
 )
