--- a/zeal/rpc/BUILD
+++ b/zeal/rpc/BUILD
@@ -3,7 +3,7 @@ go_library(
     srcs = ["rpc.go"],
     deps = [
         "//creds",
-        "//third_party/go:logging",
+        "//third_party/go:cli-init",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
         "//third_party/go/prometheus:grpc-prometheus",
