--- a/creds/BUILD
+++ b/creds/BUILD
@@ -2,6 +2,7 @@ go_library(
     name = "creds",
     srcs = ["creds.go"],
     deps = [
+        "//third_party/go:cli-init",
         "//third_party/go:grpc",
         "//third_party/go:logging",
     ],
