--- a/metrics/BUILD
+++ b/metrics/BUILD
@@ -2,7 +2,7 @@ go_library(
     name = "metrics",
     srcs = ["metrics.go"],
     deps = [
-        "//third_party/go:logging",
+        "//third_party/go:cli-init",
         "//third_party/go/prometheus",
     ],
     visibility = ["PUBLIC"],
