--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -5,10 +5,11 @@ go_library(
         "//creds",
         "//third_party/go/gocloud",
         "//third_party/go:bytestream",
+        "//third_party/go:cli-init",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
-        "//third_party/go:longrunning",
         "//third_party/go:logging",
+        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go/prometheus",
