--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -2,8 +2,8 @@ go_library(
     name = "common",
     srcs = ["common.go"],
     deps = [
+        "//third_party/go:cli-init",
         "//third_party/go/gocloud",
-        "//third_party/go:logging",
     ],
     visibility = ["//mettle/..."],
 )
