More specifically exclude self from cache peer list

--- a/elan/BUILD
+++ b/elan/BUILD
@@ -11,6 +11,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log --admin_disabled",
+    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log --admin_disabled --cache_port 9200 --cache_peer localhost:9200 --cache_self_ip=127.0.0.1",
     srcs = [":elan"],
 )
