--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -2,6 +2,7 @@ go_library(
     name = "worker",
     srcs = glob(["*.go"]),
     deps = [
+        "//proto:record",
         "//third_party/go/gocloud",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
