Implementing replication in proxy
Each write request is mirrored to n storage nodes, and reads rotate through them until successful.

--- a/sanguine/rpc/BUILD
+++ b/sanguine/rpc/BUILD
@@ -1,6 +1,6 @@
 go_library(
     name = "rpc",
-    srcs = ["rpc.go"],
+    srcs = glob(["*.go"]),
     deps = [
         "//creds",
         "//proto:record",
@@ -8,6 +8,7 @@ go_library(
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:errgroup",
+        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
         "//third_party/go:protobuf",
