--- a/sanguine/trie/BUILD
+++ b/sanguine/trie/BUILD
@@ -1,10 +1,15 @@
 go_library(
     name = "trie",
-    srcs = ["trie.go"],
+    srcs = [
+        "replication.go",
+        "trie.go",
+    ],
     visibility = ["//sanguine/..."],
     deps = [
         "//proto:record",
         "//third_party/go:bytestream",
+        "//third_party/go:cli-init",
+        "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:remote-apis",
     ],
@@ -12,9 +17,10 @@ go_library(
 
 go_test(
     name = "trie_test",
-    srcs = ["trie_test.go"],
+    srcs = glob(["*_test.go"]),
     deps = [
         ":trie",
+        "//third_party/go:grpc",
         "//third_party/go:testify",
     ],
 )
