Add support for specifying the host to listen on

--- a/flair/BUILD
+++ b/flair/BUILD
@@ -11,6 +11,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "exec $(out_location :flair) -g 0-7:127.0.0.1:7777 -g 8-f:127.0.0.1:7777 -e 0-f:127.0.0.1:7778 -a 0-f:127.0.0.1:7776 --admin_disabled",
+    cmd = "exec $(out_location :flair) --host 127.0.0.1 -g 0-7:127.0.0.1:7777 -g 8-f:127.0.0.1:7777 -e 0-f:127.0.0.1:7778 -a 0-f:127.0.0.1:7776 --admin_disabled",
     srcs = [":flair"],
 )
