--- a/zeal/BUILD
+++ b/zeal/BUILD
@@ -10,6 +10,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "exec $(out_location :zeal) -s 127.0.0.1:7777 -v 4 --log_file plz-out/log/zeal.log --admin_disabled",
+    cmd = "exec $(out_location :zeal) --host 127.0.0.1 -s 127.0.0.1:7777 -v 4 --log_file plz-out/log/zeal.log --admin_disabled",
     srcs = [":zeal"],
 )
