Share logging stuff from Elan

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -2,7 +2,7 @@ go_library(
     name = "rpc",
     srcs = glob(["*.go"]),
     deps = [
-        "//creds",
+        "//grpc",
         "//proto:record",
         "//third_party/go/gocloud",
         "//third_party/go/gocloud:api",
