Commonise a bunch of code

--- a/grpcutil/BUILD
+++ b/grpcutil/BUILD
@@ -1,9 +1,11 @@
 go_library(
-    name = "grpc",
+    name = "grpcutil",
     srcs = glob(["*.go"]),
     deps = [
         "//third_party/go:cli-init",
         "//third_party/go:grpc",
+        "//third_party/go:grpc-middleware",
+        "//third_party/go/prometheus:grpc-prometheus",
         "//third_party/go:logging",
     ],
     visibility = ["PUBLIC"],
