Share common grpc server options
This is kinda breaking since it makes the default port 7777 for everything #dealwithit

--- a/mettle/BUILD
+++ b/mettle/BUILD
@@ -2,6 +2,7 @@ go_binary(
     name = "mettle",
     srcs = ["main.go"],
     deps = [
+        "//grpcutil",
         "//mettle/worker",
         "//mettle/api",
         "//mettle/common",
@@ -12,6 +13,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "exec $(out_location :mettle) dual -s 127.0.0.1:7777 -d plz-out/mettle -v 4 --log_file plz-out/log/mettle.log --browser http://127.0.0.1:7779 --sandbox ~/.please/please_sandbox --admin_host 127.0.0.1",
+    cmd = "exec $(out_location :mettle) dual --host 127.0.0.1 --port 7778 -s 127.0.0.1:7777 -d plz-out/mettle -v 4 --log_file plz-out/log/mettle.log --browser http://127.0.0.1:7779 --sandbox ~/.please/please_sandbox --admin_host 127.0.0.1",
     srcs = [":mettle"],
 )
