--- a/mettle/api/BUILD
+++ b/mettle/api/BUILD
@@ -22,6 +22,7 @@ go_test(
     srcs = ["api_test.go"],
     deps = [
         ":api",
+        "//grpcutil",
         "//third_party/go:grpc",
         "//third_party/go/gocloud",
         "//third_party/go:testify",
