--- a/elan/BUILD
+++ b/elan/BUILD
@@ -3,6 +3,7 @@ go_binary(
     srcs = ["main.go"],
     deps = [
         "//elan/rpc",
+        "//grpcutil",
         "//third_party/go:cli-init",
         "//third_party/go:http-admin",
         "//third_party/go/gocloud",
@@ -11,6 +12,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) --host 127.0.0.1 -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log --admin_disabled --cache_port 9200 --cache_peer localhost:9200 --cache_self_ip=127.0.0.1 --file_cache_path plz-out/elan_cache --file_cache_max_size 100M",
+    cmd = "mkdir -p plz-out/elan && exec $(out_location :elan) --host 127.0.0.1 --port 7777 -s file://\\\\$PWD/plz-out/elan --log_file plz-out/log/elan.log --admin_disabled --cache_port 9200 --cache_peer localhost:9200 --cache_self_ip=127.0.0.1 --file_cache_path plz-out/elan_cache --file_cache_max_size 100M",
     srcs = [":elan"],
 )
