Introducing Lucidity, a new server to track status of Mettle workers.
It displays a very basic web view plus a simple JSON endpoint to get their status.
Should make it a bit easier to keep an eye on a disparate set of workers.

--- a/.plzconfig
+++ b/.plzconfig
@@ -11,4 +11,4 @@ protocgoplugin = //third_party/go:protoc-gen-go
 language = go
 
 [alias "runlocal"]
-cmd = run parallel //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local
+cmd = run parallel //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local //lucidity:run_local
