--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
            path: plz-out/results
        - run:
            name: Package
-           command: ./pleasew build //elan //mettle //zeal //flair //scripts:gen_release -p --profile ci -v 2
+           command: ./pleasew build //elan //mettle //zeal //flair //lucidity //scripts:gen_release -p --profile ci -v 2
        - persist_to_workspace:
            root: plz-out/bin
            paths:
@@ -36,7 +36,7 @@ jobs:
      steps:
        - attach_workspace:
            at: /tmp/workspace
-       - run: /tmp/workspace/scripts/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/flair/flair /tmp/workspace/mettle/mettle /tmp/workspace/zeal/zeal
+       - run: /tmp/workspace/scripts/gen_release.pex /tmp/workspace/elan/elan /tmp/workspace/flair/flair /tmp/workspace/mettle/mettle /tmp/workspace/zeal/zeal /tmp/workspace/lucidity/lucidity
 
 workflows:
   version: 2
