Add setup for disabling specific workers

--- a/lucidity/rpc/BUILD
+++ b/lucidity/rpc/BUILD
@@ -9,6 +9,7 @@ go_bindata(
 go_library(
     name = "rpc",
     srcs = [
+        "auth.go",
         "rpc.go",
         ":static_files",
     ],
@@ -17,6 +18,7 @@ go_library(
         "//proto:lucidity",
         "//third_party/go:cli-init",
         "//third_party/go:protobuf",
+        "//third_party/go/gocloud:api",
         "//third_party/go/prometheus",
     ],
     visibility = ["//lucidity/..."],
