Adding purity proto

--- a/proto/BUILD
+++ b/proto/BUILD
@@ -3,3 +3,9 @@ grpc_library(
     srcs = ["lucidity.proto"],
     visibility = ["PUBLIC"],
 )
+
+grpc_library(
+    name = "purity",
+    srcs = ["purity.proto"],
+    visibility = ["PUBLIC"],
+)
