make it compile

--- a/purity/gc/BUILD
+++ b/purity/gc/BUILD
@@ -4,8 +4,10 @@ go_library(
     deps = [
         "//grpcutil",
         "//proto:purity",
+        "//third_party/go:cli-init",
         "//third_party/go:go-multierror",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
     ],
+    visibility = ["//purity/..."],
 )
