implement in flair

--- a/flair/rpc/BUILD
+++ b/flair/rpc/BUILD
@@ -4,6 +4,7 @@ go_library(
     deps = [
         "//grpcutil",
         "//flair/trie",
+        "//proto:purity",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:errgroup",
