--- a/purity/gc/BUILD
+++ b/purity/gc/BUILD
@@ -1,13 +1,16 @@
 go_library(
     name = "gc",
-    srcs = ["gc.go"],
+    srcs = ["gc.go", "progress.go"],
     deps = [
         "//grpcutil",
         "//proto:purity",
         "//third_party/go:cli-init",
         "//third_party/go:go-multierror",
+        "//third_party/go:grpc",
+        "//third_party/go:grpc-middleware",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
+        "//third_party/go:terminal",
     ],
     visibility = ["//purity/..."],
 )
