--- a/elan/gzfile/BUILD
+++ b/elan/gzfile/BUILD
@@ -2,6 +2,8 @@ go_library(
     name = "gzfile",
     srcs = glob(["*.go"], exclude=["*_test.go"]),
     deps = [
+        "//grpcutil",
+        "//third_party/go:xattr",
         "//third_party/go/gocloud",
     ],
     visibility = ["//elan/..."],
@@ -13,5 +15,6 @@ go_test(
     deps = [
         ":gzfile",
         "//third_party/go/gocloud",
+        "//third_party/go:testify",
     ],
 )
