Add size-measuring code to discern

--- a/discern/BUILD
+++ b/discern/BUILD
@@ -3,7 +3,9 @@ go_binary(
     srcs = ["main.go"],
     deps = [
         "//grpcutil",
+        "//purity/gc",
         "//third_party/go:cli-init",
+        "//third_party/go:humanize",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:remote-apis",
