Set up max age etc

--- a/purity/BUILD
+++ b/purity/BUILD
@@ -12,6 +12,6 @@ go_binary(
 
 sh_cmd(
     name = "run_local",
-    cmd = "exec $(out_location :purity) --host 127.0.0.1 --log_file plz-out/log/purity.log --admin_disabled --storage 127.0.0.1:7777 --token_file grpcutil/token.txt",
+    cmd = "exec $(out_location :purity) one --url 127.0.0.1:7777 --log_file plz-out/log/purity.log --admin_disabled --token_file grpcutil/token.txt --min_age 15m",
     srcs = [":purity"],
 )
