Fix up reporting a bit

--- a/purity/gc/BUILD
+++ b/purity/gc/BUILD
@@ -8,6 +8,7 @@ go_library(
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
+        "//third_party/go:humanize",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:terminal",
