--- a/.plzconfig
+++ b/.plzconfig
@@ -1,3 +1,7 @@
+[please]
+location = ~/.please
+version = 15.0.0-beta9
+
 [go]
 importpath = github.com/thought-machine/please-servers
 gopath = $TMP_DIR:$TMP_DIR/third_party/go:$TMP_DIR/third_party/go/prometheus:$TMP_DIR/third_party/go/gocloud
