Update config for greater than beta9

--- a/.plzconfig
+++ b/.plzconfig
@@ -1,6 +1,6 @@
 [please]
 location = ~/.please
-version = 15.0.0-beta9
+version = >=15.0.0-beta9
 
 [go]
 importpath = github.com/thought-machine/please-servers
