Add an intermediate interface to make this all possible

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -3,6 +3,7 @@ go_library(
     srcs = glob(["*.go"]),
     deps = [
         "//elan/gzfile",
+        "//elan/mux",
         "//grpcutil",
         "//proto:purity",
         "//third_party/go/gocloud",
