--- a/browser/BUILD
+++ b/browser/BUILD
@@ -2,10 +2,10 @@
 # visualise some of the outputs.
 remote_file(
     name = "bb_browser",
-    url = "https://get.please.build/third_party/binary/bb-browser-${OS}_${ARCH}-20200329",
+    url = "https://get.please.build/third_party/binary/bb-browser-${OS}_${ARCH}-20200730",
     hashes = [
-        "ad8c57d8e3980c8b332bb3e1279183eb1c33d2e2672a843b9a9ea9723b709ea1",
-        "9d2600a144a83268f112f1d81c1bc06bad838840bbbaacf2ca4cf4663a4cfd3f",
+        "c26928e8d53e6ed9cce4a74c9f10eb9b2dbaaeed7da988440e741c3ee024c9fc",
+        "317d967ebfddfd6eb6bc3baa0519ec4e9580d604a4edb3d759ebae81b90adb2d",
     ],
     out = "bb-browser",
     binary = True,
@@ -13,8 +13,8 @@ remote_file(
 
 remote_file(
     name = "templates",
-    url = "https://get.please.build/third_party/binary/bb-browser-templates-20200102.tar.gz",
-    hashes = ["1dc3bae9d39fa2a9f59914106fc9d104e1a83e07"],
+    url = "https://get.please.build/third_party/binary/bb-browser-templates-20200730.tar.gz",
+    hashes = ["6de808dfb93fbf25c5761062caf484ca845f59921d3258eb92f0eed7681883d8"],
 )
 
 genrule(
@@ -35,5 +35,8 @@ sh_cmd(
     name = "run_local",
     cmd = "cd plz-out/bin/browser && exec ./bb-browser config.jsonnet",
     srcs = [":bb_browser"],
-    deps = [":extract_templates", ":config"],
+    deps = [
+        ":extract_templates",
+        ":config",
+    ],
 )
