--- a/flair/rpc/BUILD
+++ b/flair/rpc/BUILD
@@ -10,6 +10,7 @@ go_library(
         "//third_party/go:errgroup",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
+        "//third_party/go:longrunning",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
