implement zstd file-writing compression

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -1,22 +1,23 @@
 go_library(
     name = "rpc",
     srcs = glob(["*.go"]),
+    visibility = ["//elan/..."],
     deps = [
         "//elan/gzfile",
+        "//elan/zstfile",
         "//grpcutil",
         "//proto:purity",
-        "//third_party/go/gocloud",
-        "//third_party/go/gocloud:api",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:longrunning",
-        "//third_party/go/prometheus",
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:rpcstatus",
+        "//third_party/go/gocloud",
+        "//third_party/go/gocloud:api",
+        "//third_party/go/prometheus",
     ],
-    visibility = ["//elan/..."],
 )
