--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -15,6 +15,7 @@ go_library(
         "//third_party/go:protobuf",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
+        "//third_party/go:ristretto",
         "//third_party/go:rpcstatus",
         "//third_party/go/gocloud",
         "//third_party/go/gocloud:api",
