--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -20,5 +20,6 @@ go_library(
         "//third_party/go/gocloud",
         "//third_party/go/gocloud:api",
         "//third_party/go/prometheus",
+        "//third_party/go:zstd",
     ],
 )
