--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -20,7 +20,7 @@ go_library(
         "//third_party/go:rpcstatus",
         "//third_party/go/gocloud",
         "//third_party/go/gocloud:api",
-        "//third_party/go/prometheus"
+        "//third_party/go/prometheus",
         "//third_party/go:zstd",
     ],
 )
