Put the compressor back server-side so it's a mildly easier migration

--- a/grpcutil/BUILD
+++ b/grpcutil/BUILD
@@ -1,12 +1,13 @@
 go_library(
     name = "grpcutil",
     srcs = glob(["*.go"]),
+    visibility = ["PUBLIC"],
     deps = [
         "//third_party/go:cli-init",
+        "//third_party/go:go-grpc-compression",
         "//third_party/go:grpc",
         "//third_party/go:grpc-middleware",
-        "//third_party/go/prometheus:grpc-prometheus",
         "//third_party/go:logging",
+        "//third_party/go/prometheus:grpc-prometheus",
     ],
-    visibility = ["PUBLIC"],
 )
