Implement per-blob compression (#60)
* update dep

* Advertise the supported compressor

* Starting on compression

* redo hash verification on write side

* Implement compression on reads

* correct command

* Add some Prometheus metrics and update SDK

* Remove gzfile storage backend

* Update

* Fix up Zeal

* Implement in worker

* Metric tweak

* Limit max size within a blob

* another metric

* Update third-party libs

* Compress batch downloads

* Optionally compress non-batched blobs

* And on the upload side

* Update Zeal to use new method

* Support uploading compressed blobs

* Remove zstfile backend

* tying it back up

* Implement batch compression

* Strip out the old RPC-level compression code

* Little more cleanup

* Update metrics a bit

* Trim down some checks

* Don't attempt compressed reads on the action cache

* Particularly critical line...

* Simplify the metrics setup a bit

* De-genericising writing a bit; most paths are actually fairly unique.

* Encode at fastest speed

* Put the compressor back server-side so it's a mildly easier migration

* Honour size limits on upload / download

* Distinguish between streamed & single requests (e.g. GetActionResult) for metrics

* Advertise the capability

* test not relevant any more https://www.youtube.com/watch?v=rR4n-0KYeKQ

* Don't do any compression if the server doesn't support it

Technically we could still do streaming compression if the server advertises it, but in practice it won't, and this will make it resilient through an upgrade.

* Remove gzfile prefix trim

* Cleanup

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -1,10 +1,11 @@
 go_library(
     name = "rpc",
-    srcs = glob(["*.go"]),
+    srcs = glob(
+        ["*.go"],
+        exclude = ["*_test.go"],
+    ),
     visibility = ["//elan/..."],
     deps = [
-        "//elan/gzfile",
-        "//elan/zstfile",
         "//grpcutil",
         "//proto:purity",
         "//third_party/go:bytestream",
@@ -17,6 +18,7 @@ go_library(
         "//third_party/go:remote-apis-sdks",
         "//third_party/go:ristretto",
         "//third_party/go:rpcstatus",
+        "//third_party/go:zstd",
         "//third_party/go/gocloud",
         "//third_party/go/gocloud:api",
         "//third_party/go/prometheus",
