Add test on resuming a compressed stream

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -36,6 +36,7 @@ go_test(
         "//third_party/go:grpc",
         "//third_party/go:remote-apis",
         "//third_party/go:testify",
+        "//third_party/go:zstd",
     ],
 )
 
