--- a/purity/gc/BUILD
+++ b/purity/gc/BUILD
@@ -2,12 +2,11 @@ go_library(
     name = "gc",
     srcs = glob(["*.go"]),
     deps = [
-        "//grpcutil",
         "//proto:purity",
+        "//rexclient",
         "//third_party/go:cli-init",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
-        "//third_party/go:grpc-middleware",
         "//third_party/go:humanize",
         "//third_party/go:remote-apis",
         "//third_party/go:remote-apis-sdks",
