Set an ordering key for pub/sub messages if possible

--- a/mettle/worker/BUILD
+++ b/mettle/worker/BUILD
@@ -5,6 +5,7 @@ go_library(
         "//grpcutil",
         "//proto:lucidity",
         "//third_party/go/gocloud",
+        "//third_party/go/gocloud:genproto",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
         "//third_party/go:copyfile",
