Commonise publishing code so it happens on the server side too

--- a/mettle/common/BUILD
+++ b/mettle/common/BUILD
@@ -1,9 +1,10 @@
 go_library(
     name = "common",
     srcs = ["common.go"],
+    visibility = ["//mettle/..."],
     deps = [
         "//third_party/go:cli-init",
         "//third_party/go/gocloud",
+        "//third_party/go/gocloud:genproto",
     ],
-    visibility = ["//mettle/..."],
 )
