--- a/lucidity/BUILD
+++ b/lucidity/BUILD
@@ -2,15 +2,15 @@ go_binary(
     name = "lucidity",
     srcs = ["main.go"],
     deps = [
-        "//lucidity/rpc",
+        "//cli",
         "//grpcutil",
+        "//lucidity/rpc",
         "//third_party/go:cli-init",
-        "//third_party/go:http-admin",
     ],
 )
 
 sh_cmd(
     name = "run_local",
-    cmd = "exec $(out_location :lucidity) --host 127.0.0.1 --port 7774 --admin_disabled",
     srcs = [":lucidity"],
+    cmd = "exec $(out_location :lucidity) --host 127.0.0.1 --port 7774 --admin_disabled",
 )
