Allow Mettle to directly access the storage (#69)
* Split out server creation

* Start building it out in this package

* Implement methods

* Implement UploadIfMissing

* Implement BatchDownload

* implement ReadToFile

* start changing mettle over

* Forgot about GetDirectoryTree

* Finish changing Mettle over

* Allow Mettle to half-and-half its workers when in dual mode

* Fix a few things

* Add an explicit check on response size

* Update hash

* only need to compress here

not really sure this is having much negative effect but it seems unnecessary

* Don't double-close the writer

* version

--- a/elan/rpc/BUILD
+++ b/elan/rpc/BUILD
@@ -4,12 +4,17 @@ go_library(
         ["*.go"],
         exclude = ["*_test.go"],
     ),
-    visibility = ["//elan/..."],
+    visibility = [
+        "//elan/...",
+        "//mettle/worker/...",
+    ],
     deps = [
         "//grpcutil",
         "//proto:purity",
+        "//rexclient",
         "//third_party/go:bytestream",
         "//third_party/go:cli-init",
+        "//third_party/go:errgroup",
         "//third_party/go:go-multierror",
         "//third_party/go:grpc",
         "//third_party/go:longrunning",
