--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,9 @@ jobs:
        - run:
            name: Test
            command: ./pleasew test -p --profile ci -v 2
+       - run:
+           name: Integrashone Tests
+           command: ./pleasew run //tests:test_runner
        - store_test_results:
            path: plz-out/results
        - run:
