--- a/.plzconfig
+++ b/.plzconfig
@@ -15,3 +15,8 @@ language = go
 
 [alias "runlocal"]
 cmd = run parallel //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local //lucidity:run_local
+desc = Runs an instance of each server for local development
+
+[alias "buildlocal"]
+cmd = build //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local //lucidity:run_local
+desc = Builds (but doesn't run) all the servers
