--- a/.plzconfig
+++ b/.plzconfig
@@ -20,3 +20,6 @@ desc = Runs an instance of each server for local development
 [alias "buildlocal"]
 cmd = build //elan:run_local //mettle:run_local //browser:run_local //zeal:run_local //flair:run_local //lucidity:run_local
 desc = Builds (but doesn't run) all the servers
+
+[featureflags]
+RemovePleasings = true
