--- a/.plzconfig
+++ b/.plzconfig
@@ -1,6 +1,9 @@
 [please]
 version = >=15.12.0
 
+[build]
+path = /usr/local/go/bin:/usr/local/bin:/usr/bin:/bin
+
 [go]
 importpath = github.com/thought-machine/please-servers
 gopath = $TMP_DIR:$TMP_DIR/third_party/go:$TMP_DIR/third_party/go/prometheus:$TMP_DIR/third_party/go/gocloud
